--- a/research.html
+++ b/research.html
@@ -289,36 +289,6 @@ $(document).ready(function () {
 
 
 <p><font size="6"> Publications, and Works Under Review</font></p>
-<p><font size="3"> Barberia, Lorena, Maria Leticia Claro Oliveira,
-Andrea Junqueira, Natalia Moreria, and Guy Whitten. 2021. “Should I Stay
-or Should I Go? Embracing Causal Heterogeneity in the Study of Pandemic
-Policy and Citizen Behavior.” <em>Social Science Quartely</em>.
-Available here: <a
-href="https://onlinelibrary.wiley.com/doi/10.1111/ssqu.13037"
-class="uri">https://onlinelibrary.wiley.com/doi/10.1111/ssqu.13037</a>.</font></p>
-<button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName" center>
-Abstract
-</button>
-<div id="BlockName" class="collapse">
-<p><em>Objective</em>: To test for multicausality between government
-policy, health outcomes, economic performance, and citizen behavior
-during the COVID-19 global pandemic. <em>Methods</em>: We perform
-Granger-causality tests to explore the interrelationship between four
-endogenous variables, social distancing policy, home isolation, balance
-rate, and average weekly COVID-19 deaths, in the 26 states of Brazil. As
-exogenous variables, we included a linear time trend and a dummy for the
-week in which the World Health Organization (WHO) declared COVID-19 a
-global pandemic. <em>Results</em>: Our analysis of Granger causal
-ordering between the four variables demonstrates that there is
-significant heterogeneity across the Brazilian federation. These
-findings can be interpreted as underscoring that there is no common
-model applicable to all states, and that the dynamics are
-context-dependent. <em>Conclusion</em>: Our suggested approach allows
-researchers to account for the complex interrelationship between
-government policy, citizen behavior, the economy, and COVID-related
-health outcomes.</p>
-</div>
-<p><br /></p>
 <p><font size="3"> Junqueira, Andrea, and Patrick Cunha Silva.
 “Strengthening the Party, Weakening the Women: Unforeseen Consequences
 of Strengthening Institutions.” <em>Conditionally Accepted, The Journal
@@ -346,9 +316,10 @@ unintended consequences of institutional engineering.</p>
 </div>
 <p><br /></p>
 <p><font size="3"> Junqueira, Andrea, Ali Kagalwala, and Christine
-Lipsmeyer. “What’s Your Problem? How Issue Ownership and Partisan
-Discourse Influence Personal Concerns.” <em>Accepted, Social Science
-Quartely</em>. </font></p>
+Lipsmeyer. 2023. “What’s Your Problem? How Issue Ownership and Partisan
+Discourse Influence Personal Concerns.” <em>Social Science
+Quartely</em>. Available <a
+href="https://doi.org/10.1111/ssqu.13259">here</a>.</font></p>
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName3" center>
 Abstract
 </button>
@@ -372,9 +343,10 @@ voters; we show that they can shape personal perceptions.</p>
 </div>
 <p><br /></p>
 <p><font size="3"> Junqueira, Andrea, Thiago Silva, and Guy Whitten.
-“What About Us? Political Competition, Economic Performance,
-Immigration, and Nativist Appeals.” <em>Accepted, Social Science
-Quartely</em>. </font></p>
+2023. “What About Us? Political Competition, Economic Performance,
+Immigration, and Nativist Appeals.” <em>Social Science Quartely</em>.
+Available <a
+href="https://doi.org/10.1111/ssqu.13240">here</a>.</font></p>
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName4" center>
 Abstract
 </button>
@@ -394,6 +366,35 @@ relationship between economic performance, immigration, and parties’
 nativist appeals, revealing the strategic behavior of political parties
 in their choices of when to make nativist appeals more or less prominent
 in their electoral campaigns.</p>
+</div>
+<p><br /></p>
+<p><font size="3"> Barberia, Lorena, Maria Leticia Claro Oliveira,
+Andrea Junqueira, Natalia Moreria, and Guy Whitten. 2021. “Should I Stay
+or Should I Go? Embracing Causal Heterogeneity in the Study of Pandemic
+Policy and Citizen Behavior.” <em>Social Science Quartely</em>.
+Available <a
+href="https://onlinelibrary.wiley.com/doi/10.1111/ssqu.13037">here</a>.</font></p>
+<button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName" center>
+Abstract
+</button>
+<div id="BlockName" class="collapse">
+<p><em>Objective</em>: To test for multicausality between government
+policy, health outcomes, economic performance, and citizen behavior
+during the COVID-19 global pandemic. <em>Methods</em>: We perform
+Granger-causality tests to explore the interrelationship between four
+endogenous variables, social distancing policy, home isolation, balance
+rate, and average weekly COVID-19 deaths, in the 26 states of Brazil. As
+exogenous variables, we included a linear time trend and a dummy for the
+week in which the World Health Organization (WHO) declared COVID-19 a
+global pandemic. <em>Results</em>: Our analysis of Granger causal
+ordering between the four variables demonstrates that there is
+significant heterogeneity across the Brazilian federation. These
+findings can be interpreted as underscoring that there is no common
+model applicable to all states, and that the dynamics are
+context-dependent. <em>Conclusion</em>: Our suggested approach allows
+researchers to account for the complex interrelationship between
+government policy, citizen behavior, the economy, and COVID-related
+health outcomes.</p>
 </div>
 <p><br /></p>
 <p><font size="6"> Selected Works in Progress</font></p>
