--- a/research.html
+++ b/research.html
@@ -286,7 +286,7 @@ $(document).ready(function () {
 
 
 <p><font size="6"> Publications, and Works Under Review</font></p>
-<p><font size="3"> Junqueira, Andrea, and Patrick Cunha Silva.
+<p><font size="3"> Junqueira, Andrea, and Patrick Cunha Silva. 2023.
 “Strengthening the Party, Weakening the Women: Unforeseen Consequences
 of Strengthening Institutions.” <em>The Journal of Politics</em>.
 Available <a
