--- a/research.html
+++ b/research.html
@@ -395,6 +395,27 @@ government policy, citizen behavior, the economy, and COVID-related
 health outcomes.</p>
 </div>
 <p><br /></p>
+<p><font size="3"> Eastman, Abbie, Andrea Junqueira, Ali Kagalwala,
+Andrew Philips, and Guy Whitten. “Volatile Pies: Modeling Compositional
+Volatility.” <em>Revise and resubmit</em>. </font></p>
+<button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName6" center>
+Abstract
+</button>
+<div id="BlockName6" class="collapse">
+<p><em>Objective</em>: To demonstrate the utility of modeling
+compositional volatility in substantive domains beyond budgeting.
+<em>Methods</em>: We show how to model compositional volatility on its
+own or as a part of a system of equations in which the component parts
+of the compositional outcome variable are also modeled.
+<em>Results</em>: Using data on the volatility of support for German
+political parties, we demonstrate the usefulness of stand-alone models
+of compositional volatility. Using data on the volatility of income
+shares in the United States, we demonstrate the usefulness of modeling
+volatility together with compositional components. <em>Conclusion</em>:
+There is considerable potential for modeling compositional
+volatility.</p>
+</div>
+<p><br /></p>
 <p><font size="3"> Janusz, Andrew, Patrick Cunha Silva, and Andrea
 Junqueira. “Electoral Role Models: Political Empowerment and Candidate
 Emergence.” <em>Under review</em>. </font></p>
@@ -417,27 +438,6 @@ results, which are robust to several alternative specifications, suggest
 that even if the election of a woman or minority politician inspires
 others to enter politics, barriers may impede them from running for
 office.</p>
-</div>
-<p><br /></p>
-<p><font size="3"> Eastman, Abbie, Andrea Junqueira, Ali Kagalwala,
-Andrew Philips, and Guy Whitten. “Volatile Pies: Modeling Compositional
-Volatility.” <em>Under review</em>. </font></p>
-<button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName6" center>
-Abstract
-</button>
-<div id="BlockName6" class="collapse">
-<p><em>Objective</em>: To demonstrate the utility of modeling
-compositional volatility in substantive domains beyond budgeting.
-<em>Methods</em>: We show how to model compositional volatility on its
-own or as a part of a system of equations in which the component parts
-of the compositional outcome variable are also modeled.
-<em>Results</em>: Using data on the volatility of support for German
-political parties, we demonstrate the usefulness of stand-alone models
-of compositional volatility. Using data on the volatility of income
-shares in the United States, we demonstrate the usefulness of modeling
-volatility together with compositional components. <em>Conclusion</em>:
-There is considerable potential for modeling compositional
-volatility.</p>
 </div>
 <p><br /></p>
 <p><font size="6"> Selected Works in Progress</font></p>
