--- a/research.html
+++ b/research.html
@@ -397,7 +397,7 @@ health outcomes.</p>
 <p><br /></p>
 <p><font size="3"> Eastman, Abbie, Andrea Junqueira, Ali Kagalwala,
 Andrew Philips, and Guy Whitten. “Volatile Pies: Modeling Compositional
-Volatility.” <em>Revise and resubmit</em>. </font></p>
+Volatility.” <em>Revise and Resubmit</em>. </font></p>
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName6" center>
 Abstract
 </button>
@@ -418,7 +418,7 @@ volatility.</p>
 <p><br /></p>
 <p><font size="3"> Janusz, Andrew, Patrick Cunha Silva, and Andrea
 Junqueira. “Electoral Role Models: Political Empowerment and Candidate
-Emergence.” <em>Under review</em>. </font></p>
+Emergence.” <em>Revise and Resubmit</em>. </font></p>
 <button class="btn btn-primary btn-sm" data-toggle="collapse" data-target="#BlockName7" center>
 Abstract
 </button>
