--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Andrea Junqueira</title>
+<title>Hannah Paul</title>
 
 <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -240,9 +240,6 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="dissertation.html">Book Project</a>
-</li>
-<li>
   <a href="research.html">Research</a>
 </li>
 <li class="dropdown">
@@ -261,13 +258,13 @@ $(document).ready(function () {
   </ul>
 </li>
 <li>
-  <a href="./Junqueira_CV.pdf">CV</a>
+  <a href="./CV-Paul.pdf">CV</a>
 </li>
 <li>
   <a href="contact.html">Contact</a>
 </li>
 <li>
-  <a href="http://github.com/andrea-junqueira/">
+  <a href="http://github.com/hannah-paul/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -285,15 +282,14 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="bruno-thethe-br.jpg" class="inline" width="1300"/></p>
+<p><img src="matteo-paganelli-5XJarqlwvPA-unsplash.jpg" class="inline" width="1300"/></p>
 <div style="text-align: right">
-<font size="1">Photo by Bruno Thethe on Unsplash</font>
+<font size="1">Photo by Matteo Paganelli on Unsplash</font>
 </div>
 <p><br /></p>
-<p><img src="IMG-3979-modified.png" style="inline" width="240" align="left"/></p>
+<p><img src="profile.JPG" style="inline" width="240" align="left"/></p>
 <div style="padding-left:300px">
-<p>I am an Assistant Professor in the Department of Political Science at
-Arkansas State University.</p>
+<p>I am an Assistant Professor in the Truman School of Government and Public Affairs at the University of Missouri.</p>
 <p>My research interests focus on the intersection between economic
 development, representation, and comparative public policy.</p>
 <p>My book project is an extension of my dissertation and investigates
