--- a/index.html
+++ b/index.html
@@ -290,15 +290,15 @@ $(document).ready(function () {
 <p><img src="profile.JPG" style="inline" width="240" align="left"/></p>
 <div style="padding-left:300px">
 <p>I am an Assistant Professor in the Truman School of Government and Public Affairs at the University of Missouri.</p>
-<p>My research interests focus on the intersection between economic
-development, representation, and comparative public policy.</p>
-<p>My book project is an extension of my dissertation and investigates
-how poverty and income inequality affect democratic politics, focusing
-on their consequences for security policy.</p>
-<p>I am also producing research in the areas of urban politics, gender
-and racial politics, coalition governments, and political
-methodology.</p>
+<p>I study comparative political behavior, the politics of immigrant integration, and political representation. I have a special interest in time series and pooled times series analysis. 
+</p>
+<p>My current research interests focus on immigrant-origin political behavior, particularly refugees and asylum-seekers, attitudes towards these groups, as well as the effects of women's representation. 
+</p>
+<p>My work has been published in journals such as Political Science Research and Methods, Polity, Social Science Quarterly and Legislative Studies Quarterly. I hold a Ph.D. in Political Science from University of Colorado Boulder.
+</p>
 </div>
+
+
 
 
 
