--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Andrea Junqueira</a>
+      <a class="navbar-brand" href="index.html">Hannah Paul</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -238,9 +238,6 @@ $(document).ready(function () {
       <ul class="nav navbar-nav navbar-right">
         <li>
   <a href="index.html">Home</a>
-</li>
-<li>
-  <a href="dissertation.html">Book Project</a>
 </li>
 <li>
   <a href="research.html">Research</a>
@@ -261,13 +258,13 @@ $(document).ready(function () {
   </ul>
 </li>
 <li>
-  <a href="./Junqueira_CV.pdf">CV</a>
+  <a href="./CV-Paul.pdf">CV</a>
 </li>
 <li>
   <a href="contact.html">Contact</a>
 </li>
 <li>
-  <a href="http://github.com/andrea-junqueira/">
+  <a href="http://github.com/hannah-paul/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -288,13 +285,13 @@ $(document).ready(function () {
 <p><font size="6"> Contact Information</font></p>
 <p><font size="3"> <strong>Address:</strong> </font></p>
 <p>
-Andrea Junqueira<br> Department of Political Science<br> Arkansas State
-University<br> Humanities and Social Science Building, Office 3020<br>
-Jonesboro-AR 72467, United States.
+Hannah L. Paul<br> Truman School of Government and Public Affairs <br> 
+University of Missouri <br> Locust Street Building, Office E337<br>
+Columbia-MO 65211, United States.
 </p>
 <p><font size="3"> <strong>Email:</strong> </font></p>
-<p><a href="mailto:ajunqueira@astate.edu"
-class="email">ajunqueira@astate.edu</a></p>
+<p><a href="mailto:hannah.paul@missouri.edu"
+class="email">hannah.paul@missouri.edu</a></p>
 
 
 
