--- a/curriculo.html
+++ b/curriculo.html
@@ -232,7 +232,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Andrea Junqueira</a>
+      <a class="navbar-brand" href="index.html">Hannah Paul</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -241,9 +241,6 @@ $(document).ready(function () {
       <ul class="nav navbar-nav navbar-right">
         <li>
   <a href="index.html">Home</a>
-</li>
-<li>
-  <a href="dissertation.html">Book Project</a>
 </li>
 <li>
   <a href="research.html">Research</a>
@@ -264,13 +261,13 @@ $(document).ready(function () {
   </ul>
 </li>
 <li>
-  <a href="./Junqueira_CV.pdf">CV</a>
+  <a href="./CV-Paul.pdf">CV</a>
 </li>
 <li>
   <a href="contact.html">Contact</a>
 </li>
 <li>
-  <a href="http://github.com/andrea-junqueira/">
+  <a href="http://github.com/hannah-paul/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -288,7 +285,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><a href="https://github.com/andrea-junqueira/andrea-junqueira.github.io/raw/main/Junqueira_CV.pdf" target="_blank" rel="noopener">CV
+<p><a href="https://github.com/hannah-paul/hannah-paul.github.io/raw/main/CV-Paul.pdf" target="_blank" rel="noopener">CV
 Donwload</a></p>
 
 
